# django-socketio-chat

./: .gitignore  Makefile  README.md  create_user.py  pyproject.toml  setup.cfg
django_socketio_chat/: adapter.py  models.py  server.py  urls.py  views.py
django_socketio_chat/migrations/: 0001_initial.py
django_socketio_chat/static/django_socketio_chat/css/: main.css
django_socketio_chat/static/django_socketio_chat/js/: letter_avatar.js
django_socketio_chat/templates/django_socketio_chat/: index.html
testproject/: settings.py  urls.py  wsgi.py
